Fix spacing, shadows of all components

--- a/styles/_jumbo.scss
+++ b/styles/_jumbo.scss
@@ -25,13 +25,16 @@
   width: 70%;
 }
 
-input {
+.custom__input {
   -webkit-box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 12px 42px 0px rgba(0, 0, 0, 0.15);
   font-family: "Open Sans", sans-serif;
-  margin: 1.5rem 0;
+  margin: 2rem 0;
+  width: 367px;
+  height: 51px;
   justify-self: start;
+  border-radius: 5px;
 }
 
 .rectangle {
