--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,8 @@
 .btn__purple {
   background-color: #7e53fd;
   border: none;
-  padding: 0.7rem 2.2rem;
+  width: 173px;
+  height: 51px;
   border-radius: 5px;
   color: white;
   font-weight: 700;
@@ -31,7 +32,8 @@
 }
 
 .btn__purple__outline {
-  padding: 0.5rem 2.2rem;
+  width: 173px;
+  height: 51px;
   color: #7e53fd;
   border-radius: 5px;
   border: 1px solid #7e53fd;
